immich/immich-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich
spec:
  parentRefs:
    - name: http-gateway
      namespace: default
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - immich.jarvis-home.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
